<resources>
    <string name="app_name">ChatX</string>
    <string name="need_a_new_account">Need A New Account?</string>
    <string name="already_have_account">Already Have Account</string>
    <string name="display_name">Display Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="log_out">Log Out</string>
    <string name="your_email">Your email</string>
    <string name="login">Login</string>
    <string name="forgot">Forgot Password</string>
    <string name="register_now">Register Now</string>
    <string name="register">Register</string>
    <string name="login_now">Login Now</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_status">default Status</string>
    <string name="display_name1">Display Name</string>
    <string name="change_status">CHANGE STATUS</string>
    <string name="change_image">CHANGE IMAGE</string>
</resources>
