<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".Activity.SettingsActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/toolbarwrap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/settings_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            app:titleTextColor="@color/colorAccent">


            <TextView
                android:id="@+id/appname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:gravity="left"
                android:text="Profile"
                android:textColor="@color/colorAccent"
                android:textSize="28sp" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>


    <RelativeLayout
        android:id="@+id/settings_imageRl"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_below="@+id/toolbarwrap"
        android:gravity="center"
        android:padding="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/settings_image"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:elevation="5dp"
            android:src="@drawable/default_avatar"
            app:civ_border_color="@color/white"
            app:civ_border_width="1dp" />

        <ImageView
            android:id="@+id/settings_UploadPic"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignRight="@+id/settings_image"
            android:layout_alignBottom="@+id/settings_image"
            android:layout_marginRight="16dp"
            android:elevation="8dp"
            android:src="@drawable/uploadpic" />

    </RelativeLayout>

    <TextView
        android:id="@+id/settings_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_imageRl"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/display_name"
        android:background="@color/colorPrimary"
        android:elevation="5dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/settings_status_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/colorAccent"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/change_status"
        android:textColor="@android:color/white" />


    <TextView
        android:id="@+id/settings_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/default_status"
        android:textColor="@android:color/white" />

</RelativeLayout>