<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    tools:context=".Activity.RegisterActivity">
    <include
        android:id="@+id/register_toolbar"
        layout="@layout/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_toolbar"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp"
            android:theme="@style/AppTheme">

            <TextView
                android:id="@+id/appname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/blacklist"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/app_name"
                android:textColor="#fff"
                android:textSize="45sp" />


            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/register_display_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter Name"
                app:met_baseColor="@color/colorAccent"
                app:met_clearButton="true"
                app:met_errorColor="@color/white"
                app:met_floatingLabel="highlight"
                app:met_iconLeft="@drawable/man"
                app:met_primaryColor="@color/colorAccent" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter Email"
                android:inputType="textEmailAddress"
                app:met_baseColor="@color/colorAccent"
                app:met_clearButton="true"
                app:met_errorColor="@color/white"
                app:met_floatingLabel="highlight"
                app:met_iconLeft="@android:drawable/sym_action_email"
                app:met_primaryColor="@color/colorAccent" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/reg_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter Password"
                android:inputType="textPassword"
                app:met_baseColor="@color/colorAccent"
                app:met_clearButton="true"
                app:met_errorColor="@color/white"
                app:met_floatingLabel="highlight"
                app:met_iconLeft="@drawable/lock"
                app:met_primaryColor="@color/colorAccent" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Reenter Password"
                android:inputType="textPassword"
                app:met_baseColor="@color/colorAccent"
                app:met_clearButton="true"
                app:met_errorColor="@color/white"
                app:met_floatingLabel="highlight"
                app:met_iconLeft="@drawable/lock"
                app:met_primaryColor="@color/colorAccent" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/reg_create_btn"
                    style="@style/AppTheme.RoundedCornerMaterialButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/create_account"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/forgot_pass"
                    style="@style/fonts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot" />

                <TextView
                    style="@style/fonts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="|"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/login_now"
                    style="@style/fonts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_now" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</RelativeLayout>
